#define NULL ((void*)0)
typedef unsigned long size_t;  // Customize by platform.
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;  // Either arithmetic or pointer type.
/* By default, we understand bool (as a convenience). */
typedef int bool;
#define false 0
#define true 1

/* Forward declarations */

/* Type definitions */

/* Variables and functions */
 int indexed ; 
 int indx (char const**,char const**,int,int /*<<< orphan*/ *) ; 

__attribute__((used)) static int rd_rrxx(const char **p) {
	const char *listx[] = {
		"bc", "de", "ix", "sp", NULL
	};
	const char *listy[] = {
		"bc", "de", "iy", "sp", NULL
	};
	const char *list[] = {
		"bc", "de", "hl", "sp", NULL
	};
	if (indexed == 0xdd) {
		return indx (p, listx, 1, NULL);
	}
	if (indexed == 0xfd) {
		return indx (p, listy, 1, NULL);
	}
	return indx (p, list, 1, NULL);
}